--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cpdevtools/lib-node-utilities",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
   "main": "main/index.js",
   "typings": "main/index.d.ts",
@@ -21,6 +21,8 @@
     "release": "run-s release:*",
     "release:build": "pnpm run build",
     "release:publish": "pnpm publish ./dist --access public --publish-branch 'release/latest'",
+    "npm:release": "run-s npm:release:*",
+    "npm:release:publish": "pnpm publish ./dist --access public --publish-branch 'release/latest'",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier --write --ignore-unknown .",
     "pre-commit": "echo pre-commit",
