--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cpdevtools/lib-node-utilities",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
   "main": "main/index.js",
   "typings": "main/index.d.ts",
@@ -32,7 +32,10 @@
     "start:build": "pnpm run watch:build"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.0",
     "@types/inquirer": "^8.2.1",
+    "@types/semver": "^7.3.12",
+    "@types/strip-color": "^0.1.0",
     "@types/yargs": "^17.0.10",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
@@ -48,15 +51,22 @@
   "dependencies": {
     "@octokit/rest": "^19.0.3",
     "@types/node": "^18.6.1",
+    "axios": "^0.27.2",
     "chalk": "^4.0.0",
     "cli-highlight": "^2.1.11",
+    "cli-progress": "^3.11.2",
+    "date-fns": "^2.29.1",
     "dependency-graph": "^0.11.0",
     "fast-glob": "^3.2.11",
     "inquirer": "^8.0.2",
     "is-docker": "^2.2.1",
     "is-wsl": "^2.2.0",
-    "linq": "^3.0.0",
+    "linq": "^3.2.4",
+    "regedit": "^5.1.1",
+    "rxjs": "^7.5.6",
+    "semver": "^7.3.7",
     "simple-git": "^3.10.0",
+    "strip-color": "^0.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
     "type-fest": "^2.17.0",
