--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@cpdevtools/lib-node-utilities",
   "version": "0.4.14",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
-  "main": "main/index.js",
-  "typings": "main/index.d.ts",
-  "module": "module/index.js",
+  "type": "module",
+  "main": "cjs/index.js",
+  "typings": "mjs/index.d.ts",
+  "module": "mjs/index.js",
   "scripts": {
     "prepare": "run-s prepare:* && husky install",
     "prepare:husky": "husky install",
@@ -12,9 +13,9 @@
     "prepare:link": "cd ./dist && pnpm unlink && pnpm link --global",
     "build": "run-s build:*",
     "build:ts": "run-p build:ts:*",
-    "build:ts:main": "tsc -p tsconfig.json",
-    "build:ts:module": "tsc -p tsconfig.module.json",
-    "build:copy-package": "ts-node .scripts/copy-package.ts",
+    "build:ts:cjs": "tsc -p tsconfig.cjs.json",
+    "build:ts:mjs": "tsc -p tsconfig.mjs.json",
+    "build:copy-package": "ts-node --esm --experimentalSpecifierResolution=node .scripts/copy-package.ts",
     "pack": "run-s pack:*",
     "pack:build": "pnpm run build",
     "pack:pack": "cd dist && mkdir ./pack && pnpm pack --pack-destination ./pack",
