--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,26 @@
 {
   "compilerOptions": {
-    "incremental": true,
-    "lib": ["es2020"],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "es2020",
-    "rootDir": "./src",
-    "outDir": "dist/main",
-    "strict": true,
-    "inlineSourceMap": true,
+    "baseUrl": "src",
+    "rootDir": "src",
+    "target": "ES2020",
+    "module": "ES2020",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
     "esModuleInterop": true,
+    "incremental": true,
+    "inlineSourceMap": true,
+    "moduleResolution": "node",
+    "pretty": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "declaration": true,
-    "pretty": true /* Stylize errors and messages using color and context. */,
-    "types": ["node"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "strict": true,
+    "traceResolution": false,
+    "typeRoots": ["node_modules/@types", "src/types"],
+    "lib": ["esnext"],
+    "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules/**"],
+  "include": ["src"],
+  "exclude": ["node_modules/**", "dist"],
   "compileOnSave": false
 }
