--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@cpdevtools/lib-node-utilities",
   "version": "0.4.14",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
-  "type": "module",
-  "main": "cjs/index.js",
   "typings": "mjs/index.d.ts",
+  "type": "module",
+  "default": "mjs/index.js",
+  "main": "cjs/index.js",
   "module": "mjs/index.js",
   "scripts": {
     "prepare": "run-s prepare:* && husky install",
@@ -15,7 +16,7 @@
     "build:ts": "run-p build:ts:*",
     "build:ts:cjs": "tsc -p tsconfig.cjs.json",
     "build:ts:mjs": "tsc -p tsconfig.mjs.json",
-    "build:copy-package": "ts-node --esm --experimentalSpecifierResolution=node .scripts/copy-package.ts",
+    "build:copy-package": "ts-node --esm --experimentalSpecifierResolution=node --project=tsconfig.mjs.json .scripts/copy-package.ts",
     "pack": "run-s pack:*",
     "pack:build": "pnpm run build",
     "pack:pack": "cd dist && mkdir ./pack && pnpm pack --pack-destination ./pack",
