--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "baseUrl": "src",
     "rootDir": "src",
-    "target": "ES2020",
-    "module": "ES2020",
+    "outDir": "dist/mjs",
+    "target": "esnext",
+    "module": "esnext",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
