--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "@cpdevtools/lib-node-utilities",
   "version": "0.4.15",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
-  "typings": "mjs/index.d.ts",
-  "type": "module",
-  "default": "mjs/index.js",
-  "main": "cjs/index.js",
-  "module": "mjs/index.js",
+  "typings": "index.d.ts",
+  "main": "index.js",
   "scripts": {
     "prepare": "run-s prepare:* && husky install",
     "prepare:husky": "husky install",
@@ -14,9 +11,8 @@
     "prepare:link": "cd ./dist && pnpm unlink && pnpm link --global",
     "build": "run-s build:*",
     "build:ts": "run-p build:ts:*",
-    "build:ts:cjs": "tsc -p tsconfig.cjs.json",
-    "build:ts:mjs": "tsc -p tsconfig.mjs.json",
-    "build:copy-package": "ts-node --esm --experimentalSpecifierResolution=node --project=tsconfig.mjs.json .scripts/copy-package.ts",
+    "build:ts:mjs": "tsc -p tsconfig.json",
+    "build:copy-package": "ts-node .scripts/copy-package.ts",
     "pack": "run-s pack:*",
     "pack:build": "pnpm run build",
     "pack:pack": "cd dist && mkdir ./pack && pnpm pack --pack-destination ./pack",
