--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,13 @@
   "compilerOptions": {
     "baseUrl": "src",
     "rootDir": "src",
-    "outDir": "dist/mjs",
+    "outDir": "dist",
     "target": "esnext",
-    "module": "esnext",
+    "module": "CommonJS",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "esModuleInterop": true,
-    "incremental": true,
     "inlineSourceMap": true,
     "moduleResolution": "node",
     "pretty": true,
