--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "@cpdevtools/lib-node-utilities",
   "version": "0.4.15",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
-  "typings": "index.d.ts",
-  "main": "index.js",
+  "type": "module",
+  "typings": "./index.d.ts",
+  "exports": "./index.js",
+  "engines": {
+    "node": ">=14.16"
+  },
   "scripts": {
     "prepare": "run-s prepare:* && husky install",
     "prepare:husky": "husky install",
@@ -12,7 +16,7 @@
     "build": "run-s build:*",
     "build:ts": "run-p build:ts:*",
     "build:ts:mjs": "tsc -p tsconfig.json",
-    "build:copy-package": "ts-node .scripts/copy-package.ts",
+    "build:copy-package": "ts-node --esm .scripts/copy-package.ts",
     "pack": "run-s pack:*",
     "pack:build": "pnpm run build",
     "pack:pack": "cd dist && mkdir ./pack && pnpm pack --pack-destination ./pack",
@@ -63,7 +67,7 @@
     "regedit": "^5.1.1",
     "rxjs": "^7.5.6",
     "semver": "^7.3.7",
-    "simple-git": "^3.10.0",
+    "simple-git": "^3.13.0",
     "strip-color": "^0.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
