--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,21 @@
     "baseUrl": "src",
     "rootDir": "src",
     "outDir": "dist",
-    "target": "esnext",
-    "module": "CommonJS",
+    "target": "ES2022",
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "moduleDetection": "force",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "esModuleInterop": true,
     "inlineSourceMap": true,
-    "moduleResolution": "node",
+    "noImplicitOverride": true,
     "pretty": true,
+    "stripInternal": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "useDefineForClassFields": true,
     "strict": true,
     "traceResolution": false,
     "typeRoots": ["node_modules/@types", "src/types"],
