--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cpdevtools/lib-node-utilities",
-  "version": "0.4.20-rc.0",
+  "version": "0.4.20",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
   "type": "module",
   "typings": "./index.d.ts",
