--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "rootDir": "src",
     "outDir": "dist",
     "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "moduleDetection": "force",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
