--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "prepare": "run-s prepare:* && husky install",
     "prepare:husky": "husky install",
+    "prepare:remove-tags": "git tag | xargs git tag -d",
     "prepare:build": "pnpm run build",
     "prepare:link": "cd ./dist && pnpm unlink && pnpm link --global",
     "build": "run-s build:*",
