--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "src",
     "rootDir": "src",
     "outDir": "dist",
-    "target": "ES2022",
+    "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "Node",
     "moduleDetection": "force",
@@ -19,7 +19,7 @@
     "skipLibCheck": true,
     "useDefineForClassFields": true,
     "strict": true,
-    "traceResolution": false,
+    "traceResolution": true,
     "typeRoots": ["node_modules/@types", "src/types"],
     "lib": ["esnext"],
     "types": ["node"]
