--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "reset-hard": "git clean -dfx && git reset --hard && pnpm i",
     "start": "run-p start:*",
     "start:build": "pnpm run watch:build",
-    "tags": "git tag | xargs git tag -d"
+    "tags": "git tag | xargs git tag -d",
+    "test": "tsx src/test.ts"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
@@ -46,7 +47,8 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "npm-run-all2": "^6.0.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "tsx": "^4.15.8"
   },
   "publishConfig": {
     "access": "public"
@@ -81,7 +83,7 @@
     "tsimportlib": "^0.0.3",
     "tslib": "^2.4.0",
     "type-fest": "^2.17.0",
-    "typescript": "^4.7.4",
+    "typescript": "^5.5.2",
     "yaml": "^2.1.1"
   }
 }
