--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cpdevtools/lib-node-utilities",
-  "version": "0.5.0-dev.5",
+  "version": "0.5.0-dev.6",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
   "typings": "./index.d.ts",
   "main": "./index.js",
@@ -71,6 +71,7 @@
     "inquirer": "^9.2.7",
     "is-docker": "^2.2.1",
     "is-wsl": "^2.2.0",
+    "jsonc": "^2.0.0",
     "linq": "^3.2.4",
     "mustache": "^4.2.0",
     "regedit": "^5.1.1",
