--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cpdevtools/lib-node-utilities",
-  "version": "0.5.0-dev.7",
+  "version": "0.5.0-dev.8",
   "repository": "https://github.com/cpdevtools/lib-node-utilities",
   "typings": "./index.d.ts",
   "main": "./index.js",
@@ -73,6 +73,7 @@
     "is-wsl": "^2.2.0",
     "jsonc": "^2.0.0",
     "linq": "^3.2.4",
+    "minimatch": "^10.0.1",
     "mustache": "^4.2.0",
     "regedit": "^5.1.1",
     "rxjs": "^7.5.6",
